# GHeadset

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: color.hpp  dev_0ab5.cpp  dev_0ab5.hpp  device.hpp  hid.hpp  hidpp.hpp  hs_0ab5.hpp  main.cpp  parameterparser.cpp  parameterparser.hpp
